--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -21,144 +21,143 @@
 
         <!-- TODO: Update blank fragment layout -->
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
-            android:layout_width="match_parent"
+        android:id="@+id/cardView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_margin="@dimen/card_margin"
+        app:cardCornerRadius="@dimen/card_radius"
+        app:cardElevation="@dimen/card_elevation"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="@dimen/card_padding">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/Prof.cat"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:text="Prof.cat : " />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="350dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="2dp"
+        android:layout_toEndOf="@+id/Prof.cat"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/Doctors"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Doctors" />
 
-            android:layout_margin="8dp"
-            android:layout_marginTop="20dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
-            app:cardUseCompatPadding="true"
-            app:contentPadding="16dp">
+        <RadioButton
+            android:id="@+id/workers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="workers" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <RadioButton
+            android:id="@+id/Narses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Narses" />
+    </RadioGroup>
 
-                <TextView
-                    android:id="@+id/Prof.cat"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginTop="2dp"
-                    android:gravity="center"
-                    android:text="Prof.cat : " />
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Prof.cat"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
-                <RadioGroup
-                    android:id="@+id/radioGroup"
-                    android:layout_width="350dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="35dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_toEndOf="@+id/Prof.cat"
-                    android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/bef_pat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="bef-pat" />
 
-                    <RadioButton
-                        android:id="@+id/Doctors"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Doctors" />
+        <CheckBox
+            android:id="@+id/bef_asept"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="bef-asept" />
 
-                    <RadioButton
-                        android:id="@+id/workers"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="workers" />
+        <CheckBox
+            android:id="@+id/aft_b.f"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="aft-b.f" />
 
-                    <RadioButton
-                        android:id="@+id/Narses"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Narses" />
-                </RadioGroup>
+        <CheckBox
+            android:id="@+id/aft_pat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="aft-pat" />
 
-                <RadioGroup
-                    android:id="@+id/linearLayout"
-                    android:layout_width="150dp"
-                    android:layout_height="184dp"
-                    android:layout_below="@+id/Prof.cat"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:orientation="vertical">
+        <CheckBox
+            android:id="@+id/aft.p.surr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="aft.p.surr" />
 
-                    <CheckBox
-                        android:id="@+id/bef_pat"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="bef-pat" />
+    </LinearLayout>
 
-                    <CheckBox
-                        android:id="@+id/bef_asept"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="bef-asept" />
+    <LinearLayout
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radioGroup"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/linearLayout"
+        android:orientation="vertical">
 
-                    <CheckBox
-                        android:id="@+id/aft_b.f"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="aft-b.f" />
+        <CheckBox
+            android:id="@+id/HR"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="HR" />
 
-                    <CheckBox
-                        android:id="@+id/aft_pat"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="aft-pat" />
+        <CheckBox
+            android:id="@+id/HW"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="HW"/>
+        <CheckBox
+            android:id="@+id/missed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="missed" />
+    </LinearLayout>
+    </RelativeLayout>
 
-                    <CheckBox
-                        android:id="@+id/aft.p.surr"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="aft.p.surr" />
-
-                </RadioGroup>
-
-                <RadioGroup
-                    android:layout_width="130dp"
-                    android:layout_height="110dp"
-                    android:layout_below="@+id/radioGroup"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_toEndOf="@+id/linearLayout"
-                    android:orientation="vertical">
-
-                    <CheckBox
-                        android:id="@+id/HR"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="HR" />
-
-                    <CheckBox
-                        android:id="@+id/HW"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="HW" />
-
-                    <RadioButton
-                        android:id="@+id/missed"
-                        android:layout_width="match_parent"
-                        android:layout_height="35dp"
-                        android:text="missed" />
-                </RadioGroup>
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:layout_marginTop="20dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
+            android:layout_margin="@dimen/card_margin"
+            app:cardCornerRadius="@dimen/card_radius"
+            app:cardElevation="@dimen/card_elevation"
             app:cardUseCompatPadding="true"
-            app:contentPadding="16dp">
+            app:contentPadding="@dimen/card_padding">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -205,7 +204,7 @@
                         android:text="Narses" />
                 </RadioGroup>
 
-                <RadioGroup
+                <LinearLayout
                     android:id="@+id/linearLayout1"
                     android:layout_width="150dp"
                     android:layout_height="184dp"
@@ -245,9 +244,9 @@
                         android:layout_height="35dp"
                         android:text="aft.p.surr" />
 
-                </RadioGroup>
+                </LinearLayout>
 
-                <RadioGroup
+                <LinearLayout
                     android:layout_width="130dp"
                     android:layout_height="110dp"
                     android:layout_below="@+id/radioGroup1"
@@ -268,12 +267,12 @@
                         android:layout_height="35dp"
                         android:text="HW" />
 
-                    <RadioButton
+                    <CheckBox
                         android:id="@+id/missed1"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:text="missed" />
-                </RadioGroup>
+                </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -282,12 +281,12 @@
             android:id="@+id/cardView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:layout_marginTop="20dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
+            android:layout_margin="@dimen/card_margin"
+            app:cardCornerRadius="@dimen/card_radius"
+            app:cardElevation="@dimen/card_elevation"
             app:cardUseCompatPadding="true"
-            app:contentPadding="16dp">
+            app:contentPadding="@dimen/card_padding">
 
             <!-- Your existing layout content for the third card view -->
 
@@ -336,7 +335,7 @@
                         android:text="Narses" />
                 </RadioGroup>
 
-                <RadioGroup
+                <LinearLayout
                     android:id="@+id/linearLayout2"
                     android:layout_width="150dp"
                     android:layout_height="184dp"
@@ -376,9 +375,9 @@
                         android:layout_height="35dp"
                         android:text="aft.p.surr" />
 
-                </RadioGroup>
+                </LinearLayout>
 
-                <RadioGroup
+                <LinearLayout
                     android:layout_width="130dp"
                     android:layout_height="110dp"
                     android:layout_below="@+id/radioGroup2"
@@ -399,12 +398,12 @@
                         android:layout_height="35dp"
                         android:text="HW" />
 
-                    <RadioButton
+                    <CheckBox
                         android:id="@+id/missed2"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:text="missed" />
-                </RadioGroup>
+                </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -413,12 +412,12 @@
             android:id="@+id/cardView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:layout_marginTop="20dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
+            android:layout_margin="@dimen/card_margin"
+            app:cardCornerRadius="@dimen/card_radius"
+            app:cardElevation="@dimen/card_elevation"
             app:cardUseCompatPadding="true"
-            app:contentPadding="16dp">
+            app:contentPadding="@dimen/card_padding">
 
             <!-- Your existing layout content for the fourth card view -->
 
@@ -467,7 +466,7 @@
                         android:text="Narses" />
                 </RadioGroup>
 
-                <RadioGroup
+                <LinearLayout
                     android:id="@+id/linearLayout3"
                     android:layout_width="150dp"
                     android:layout_height="184dp"
@@ -507,9 +506,9 @@
                         android:layout_height="35dp"
                         android:text="aft.p.surr" />
 
-                </RadioGroup>
+                </LinearLayout>
 
-                <RadioGroup
+                <LinearLayout
                     android:layout_width="130dp"
                     android:layout_height="110dp"
                     android:layout_below="@+id/radioGroup3"
@@ -530,12 +529,12 @@
                         android:layout_height="35dp"
                         android:text="HW" />
 
-                    <RadioButton
+                    <CheckBox
                         android:id="@+id/missed3"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:text="missed" />
-                </RadioGroup>
+                </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -544,12 +543,12 @@
             android:id="@+id/cardView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
             android:layout_marginTop="20dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
+            android:layout_margin="@dimen/card_margin"
+            app:cardCornerRadius="@dimen/card_radius"
+            app:cardElevation="@dimen/card_elevation"
             app:cardUseCompatPadding="true"
-            app:contentPadding="16dp">
+            app:contentPadding="@dimen/card_padding">
 
             <!-- Your existing layout content for the fifth card view -->
 
@@ -598,8 +597,8 @@
                         android:text="Narses" />
                 </RadioGroup>
 
-                <RadioGroup
-                    android:id="@+id/linearLayout4"
+                <LinearLayout
+                        android:id="@+id/linearLayout4"
                     android:layout_width="150dp"
                     android:layout_height="184dp"
                     android:layout_below="@+id/Prof.cat4"
@@ -638,9 +637,9 @@
                         android:layout_height="35dp"
                         android:text="aft.p.surr" />
 
-                </RadioGroup>
+                </LinearLayout>
 
-                <RadioGroup
+                <LinearLayout
                     android:layout_width="130dp"
                     android:layout_height="110dp"
                     android:layout_below="@+id/radioGroup4"
@@ -661,12 +660,12 @@
                         android:layout_height="35dp"
                         android:text="HW" />
 
-                    <RadioButton
+                    <CheckBox
                         android:id="@+id/missed4"
                         android:layout_width="match_parent"
                         android:layout_height="35dp"
                         android:text="missed" />
-                </RadioGroup>
+                </LinearLayout>
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
