--- a/app/src/main/res/layout/fragment_qr_fragment.xml
+++ b/app/src/main/res/layout/fragment_qr_fragment.xml
@@ -14,40 +14,26 @@
         android:contentDescription="@string/todo" />
     <!-- TODO: Update blank fragment layout -->
 
-    <EditText
-        android:id="@+id/editTextUrl"
-        android:layout_width="304dp"
+
+    <Button
+        android:id="@+id/showDataButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="213dp"
-        android:layout_marginEnd="52dp"
-        android:hint="@string/enter_url" />
+        android:layout_marginStart="541dp"
+        android:layout_marginTop="15dp"
+        android:onClick="onShowDataButtonClick"
+        android:text="عرض البيانات" />
 
-    <Button
-        android:id="@+id/buttonGenerateQR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextUrl"
+    <TextView
+        android:id="@+id/textViewResult"
+        android:layout_width="675dp"
+        android:layout_height="529dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="127dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="119dp"
-        android:text="@string/generate_qr_code" />
-
-    <ImageView
-        android:id="@+id/imageViewQR"
-        android:layout_width="235dp"
-        android:layout_height="190dp"
-        android:layout_below="@id/buttonGenerateQR"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="98dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="78dp" />
-
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="303dp"
+        android:layout_marginTop="129dp"
+        android:text="TextView" />
 
 </RelativeLayout>
