--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,70 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="253dp"
-        android:layout_height="286dp"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/logo_ipcd"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+    <data>
 
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="400dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="70dp"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:ignore="MissingConstraints"
-         />
+        <variable
+            name="viewModel"
+            type="com.example.ipcd.app.login.LoginViewModel" />
+    </data>
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="400dp"
-        android:layout_height="45dp"
-        android:layout_below="@id/editTextEmail"
-        android:layout_marginTop="40dp"
-        android:autofillHints="creditCardSecurityCode"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-        tools:ignore="MissingConstraints" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="250dp"
-        android:layout_height="52dp"
-        android:layout_below="@id/editTextPassword"
-        android:layout_marginTop="80dp"
-        android:text="@string/login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-        tools:ignore="MissingConstraints" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="253dp"
+            android:layout_height="286dp"
+            android:layout_marginTop="100dp"
+            android:src="@drawable/logo_ipcd"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
 
-    <CheckBox
-        android:id="@+id/checkBoxShowPassword"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Show Password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="400dp"
+            android:layout_height="43dp"
+            android:layout_marginTop="70dp"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            android:onTextChanged="@{viewModel.usernameTextWatcher::onTextChanged}"
+            tools:ignore="MissingConstraints" />
 
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="400dp"
+            android:layout_height="45dp"
+            android:layout_below="@id/editTextEmail"
+            android:layout_marginTop="40dp"
+            android:autofillHints="creditCardSecurityCode"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
+            app:showPassword="@{viewModel.showPassword}"
+            android:onTextChanged="@{viewModel.passwordTextWatcher::onTextChanged}"
+            tools:ignore="MissingConstraints" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="250dp"
+            android:layout_height="52dp"
+            android:layout_below="@id/editTextPassword"
+            android:layout_marginTop="80dp"
+            android:onClick="@{() -> viewModel.login()}"
+            android:text="@string/login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.499"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+            tools:ignore="MissingConstraints" />
+
+        <CheckBox
+            android:id="@+id/checkBoxShowPassword"
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:onCheckedChanged="@{viewModel.showPasswordCheckedListener}"
+            android:text="Show Password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
