--- a/app/src/main/res/layout/item_observation_form.xml
+++ b/app/src/main/res/layout/item_observation_form.xml
@@ -34,6 +34,7 @@
             <RadioGroup
                 android:id="@+id/radioGroup"
                 android:layout_width="0dp"
+                android:layout_marginTop="4dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:orientation="horizontal"
