--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -68,6 +68,19 @@
                     android:text="@string/label_end_date"
                     app:date="@{viewModel.filterEndDate}" />
 
+                <Button
+                    android:id="@+id/printDataButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="44dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/action_print_data"
+                    app:layout_constraintBottom_toTopOf="@+id/textViewResult"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
             </LinearLayout>
 
             <Button
@@ -94,7 +107,7 @@
                 android:text="@{viewModel.statisticsCount}"
                 android:textAlignment="center"
                 android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerView_reports"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +115,7 @@
                 tools:text="There are 8 Doctors reports, 10 Nurses reports, and 3 Workers reports" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/recyclerView_reports"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
