add button for print in UI fragment

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -63,6 +63,20 @@
                     android:text="@string/label_end_date"
                     app:date="@{viewModel.filterEndDate}" />
 
+                <Button
+                    android:id="@+id/printDataButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="44dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/action_print_data"
+                    app:layout_constraintBottom_toTopOf="@+id/textViewResult"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+
             </LinearLayout>
 
             <Button
@@ -93,7 +107,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/showDataButton"
                 tools:itemCount="3"
-                tools:listitem="@layout/item_answer_statistics" />
+                tools:listitem="@layout/item_answer_statistics"
+
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
